--- a/med.Voll/src/main/resources/application.properties
+++ b/med.Voll/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
