--- a/med.Voll/src/main/resources/application.properties
+++ b/med.Voll/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace = never
+
+api.security.token.secret=${JWT_SECRET:12345678}
